--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "lp-fi": {
+    "lp-fi-master": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/lp-fi",
+            "outputPath": "dist/lp-fi-master",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "lp-fi:build"
+            "browserTarget": "lp-fi-master:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "lp-fi:build:production"
+              "browserTarget": "lp-fi-master:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "lp-fi:build"
+            "browserTarget": "lp-fi-master:build"
           }
         },
         "test": {
@@ -118,11 +118,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "lp-fi:serve"
+            "devServerTarget": "lp-fi-master:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "lp-fi:serve:production"
+              "devServerTarget": "lp-fi-master:serve:production"
             }
           }
         },
@@ -133,5 +133,5 @@
       }
     }
   },
-  "defaultProject": "lp-fi"
+  "defaultProject": "lp-fi-master"
 }
